description wrap err fixed

--- a/styles/movie-detail.module.css
+++ b/styles/movie-detail.module.css
@@ -124,13 +124,30 @@
   border-radius: 8px;
   text-align: center;
   margin-top: 16px;
-  padding: 12px 16px;
+  /* padding: 12px 16px; */
+  width: 476px;
+  padding-top: 12px;
   height: 64px;
+
   overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .promotion strong {
+  width: 100%;
+  height: 100%;
   line-height: 20px;
   color: #555;
   font-weight: 700;
+
+  overflow: hidden;
+  white-space: normal;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  word-break: keep-all;
 }
